--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -293,19 +293,18 @@
             {%- when 'delivery_tag' -%}
               <div id="delivery_tag-{{ section.id }}" role="status" class="no-js-hidden" {{ block.shopify_attributes }}>
                 {%- if product.selected_or_first_available_variant.inventory_quantity < 1 -%}
-                  Vorbestellbar
                   {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
                       <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
+                  {%- else -%}
+                  <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-oos' | t }}</b></div>
                   {%- endif -%}
                 
               {% else%}
                 {% if localization.country.iso_code == 'DE' %}
-                  <span class="DeliveryHint">● 
-                    {{ 'products.product.delivery-hint-inland' | t }}
+                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-inland' | t }}
                 </span>
                 {% else%}
-                  <span class="DeliveryHint">●
-                    {{ 'products.product.delivery-hint-ausland1' | t }}
+                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-ausland1' | t }}
                   </span>
                 {% endif %}
               {% endif %}
