--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -63,7 +63,7 @@
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
       <div class="social_info_bar color-background-2">
 
-          {{ 'products.product.social_info_bar_1' | t }} <strong>{{ product.metafields.reviews.rating_count.value | divided_by: 2.37 | round }}k+</strong> {{ 'products.product.social_info_bar_2' | t }}
+          {{ 'products.product.social_info_bar_1' | t }} <strong>{% if product.metafields.reviews.rating_count.value > 10 %}{{ product.metafields.reviews.rating_count.value }} {% else %}17{% endif %}</strong> {{ 'products.product.social_info_bar_2' | t }}
         </div>
       <div
         id="ProductInfo-{{ section.id }}"
