--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -98,7 +98,7 @@
           </div>
         {%- endif -%}
         <div class="card__content">
-          {%- if product.tags contains 'Bestseller' -%}
+          {%- if card_product.tags contains 'Bestseller' -%}
             <div class="badge-special color-accent-2" style="--display: inline-block;">
               <i class="Badge__Icon">
                 <svg width="13" height="13" viewBox="0 0 13 13">
