--- a/assets/base-neolymp.css
+++ b/assets/base-neolymp.css
@@ -9,6 +9,14 @@
     color: #ff6d0a;
 }
 
+.badge-card {
+    display: inline-block;
+    padding: 4px 16px;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px hsl(0deg 0% 69% / 50%);
+    z-index: 10;
+}
+
 .badge-special {
     display: inline-block;
     margin-left: -45px;
