--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -80,7 +80,7 @@
           <li
             id="Slide-{{ section.id }}-{{ media.id }}{{ id_append }}"
             class="product__media-item grid__item slider__slide{% if single_media_visible %} product__media-item--single{% endif %}{% if product.selected_or_first_available_variant.featured_media == null and forloop.index == 1 %} is-active{% endif %}{% if media.media_type != 'image' %} product__media-item--full{% endif %}{% if section.settings.hide_variants and variant_images contains media.src %} product__media-item--variant{% endif %}"
-            data-media-id="{{ section.id }}-{{ media.id }}-test{{media}}"
+            data-media-id="{{ section.id }}-{{ media.id }}"
           >
             {%- liquid
               assign media_position = media_position | default: 0 | plus: 1
