--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -306,6 +306,7 @@
                   <span class="DeliveryHint">● {{ 'products.product.delivery-hint-ausland1' | t }}</span>
                 {% endif %}
               {% endif %}
+              <!-- Endliefertag -->
               </div>
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
 
