--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -295,17 +295,17 @@
                 {%- if product.selected_or_first_available_variant.inventory_quantity < 1 -%}
                   {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
                       <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></span>
+                  {%- elsif product.selected_or_first_available_variant.inventory_quantity < 1 AND product.available -%}
+                      <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-oos' | t }}. </b>Vorbestellbar</b></span>
                   {%- else -%}
-                  <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-oos' | t }} Vorbestellbar</b></span>
+                  <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preoder-wodate' | t }}. </b>Vorbestellbar</b></span>
                   {%- endif -%}
                 
               {% else%}
                 {% if localization.country.iso_code == 'DE' %}
-                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-inland' | t }}
-                </span>
+                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-inland' | t }}</span>
                 {% else%}
-                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-ausland1' | t }}
-                  </span>
+                  <span class="DeliveryHint">● {{ 'products.product.delivery-hint-ausland1' | t }}</span>
                 {% endif %}
               {% endif %}
               </div>
