--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -84,7 +84,7 @@
 
                     <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | escape }}</a>
 
-                    {%- if item.original_price != item.final_price -%}
+                    {%- if item.variant.compare_at_price != item.final_price -%}
                       <div class="cart-item__discounted-prices">
                         <span class="visually-hidden">
                           {{ 'products.product.price.regular_price' | t }}
