--- a/assets/section-main-product-neolymp.css
+++ b/assets/section-main-product-neolymp.css
@@ -54,7 +54,7 @@
     margin-bottom: 0;
 }
 
-.DeliveryHint-oos {
+.DeliveryHint-preorder {
     font-size: 13px;
     color: #d87300;
     margin-bottom: 0;
