--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -84,16 +84,18 @@
 
                     <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | escape }}</a>
 
-                    {%- if item.variant.compare_at_price != item.final_price -%}
+                    {%- if item.variant.compare_at_price > item.final_price -%}
                       {% assign savings = item.variant.compare_at_price | minus: item.final_price %}
-                      You're saving {{ savings | money }}!
                       <div class="cart-item__discounted-prices">
                         <span class="visually-hidden">
                           {{ 'products.product.price.regular_price' | t }}
                         </span>
                         <s class="cart-item__old-price product-option">
                           {{- item.variant.compare_at_price | money -}}
-                        </s>
+                        </s> - You're saving {{ savings | money }}!
+                        <span class="cart-item__old-price product-option">
+                          -{{ savings | money }}!
+                        </span> 
                         <span class="visually-hidden">
                           {{ 'products.product.price.sale_price' | t }}
                         </span>
