--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -21,6 +21,10 @@
             {%- when 'subtotal' -%}
               <div class="js-contents" {{ block.shopify_attributes }}>
                 <div class="totals">
+                  <h2 class="totals__subtotal">Original:</h2>
+                  <p class="totals__subtotal-value">{{ totalsavings | money_with_currency }}</p>
+                </div>
+                <div class="totals">
                   <h2 class="totals__subtotal">{{ 'sections.cart.subtotal' | t }}</h2>
                   <p class="totals__subtotal-value">{{ cart.total_price | money_with_currency }}</p>
                 </div>
