--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -85,8 +85,7 @@
                     <a href="{{ item.url }}" class="cart-item__name h4 break">{{ item.product.title | escape }}</a>
 
                     {%- if item.variant.compare_at_price > item.final_price -%}
-                      {% assign savings = item.variant.compare_at_price | minus: item.final_price %}
-                      {% assign totalsavings = savings | plus: savings %}
+                      {% assign savings = item.variant.compare_at_price | minus: item.final_price | times: item.quantity %}
                       <div class="cart-item__discounted-prices">
                         <span class="visually-hidden">
                           {{ 'products.product.price.regular_price' | t }}
