--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -20,8 +20,10 @@
               {% render block %}
             {%- when 'subtotal' -%}
               {% assign total_saving = 0 %}
+              {% assign total_compare_at = 0 %}
               {% for item in cart.items %}
                 {% if item.variant.compare_at_price > item.variant.price %}
+                  {% assign total_compare_at = total_compare_at | plus: item.variant.compare_at_price | times: item.quantity %}
                   {% assign saving = item.variant.compare_at_price | minus: item.final_price | times: item.quantity %}
                   {% assign total_saving = saving | plus: total_saving %}
                 {% endif %}
@@ -29,11 +31,15 @@
               <div class="js-contents" {{ block.shopify_attributes }}>
                 <div class="totals">
                   <h2 class="totals__subtotal">Original:</h2>
-                  <p class="totals__subtotal-value">{{ total_saving | money_with_currency }}</p>
+                  <p class="totals__subtotal-value">{{ total_compare_at | money_with_currency }}</p>
                 </div>
                 <div class="totals">
                   <h2 class="totals__subtotal">{{ 'sections.cart.subtotal' | t }}</h2>
                   <p class="totals__subtotal-value">{{ cart.total_price | money_with_currency }}</p>
+                </div>
+                <div class="totals">
+                  <h2 class="totals__subtotal">Gespart:</h2>
+                  <s class="totals__subtotal-value">{{ total_saving | money_with_currency }}</s>
                 </div>
 
                 <div>
