--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -338,7 +338,7 @@
                     {%- if product.metafields.my_fields.musclegroups.value contains 'Po' -%}
                       <img src="{{ 'po.svg' | file_url }}" class="muscle_group-image">
                     {%- endif -%}                   
-                    {%- if product.metafields.my_fields.musclegroups.value contains 'bizeps' -%}
+                    {%- if product.metafields.my_fields.musclegroups.value contains 'Bizeps' -%}
                       <img src="{{ 'bizeps.svg' | file_url }}" class="muscle_group-image">
                     {%- endif -%}
                     {%- if product.metafields.my_fields.musclegroups.value contains 'Abduktoren' -%}
