--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -270,14 +270,14 @@
                     </div>
 
                     <div class="cart-item__price-wrapper">
-                      {%- if item.original_line_price != item.final_line_price -%}
+                      {%- if item.variant.compare_at_price  > item.final_line_price -%}
                         <dl class="cart-item__discounted-prices">
                           <dt class="visually-hidden">
                             {{ 'products.product.price.regular_price' | t }}
                           </dt>
                           <dd>
                             <s class="cart-item__old-price price price--end">
-                              {{ item.original_line_price | money }}
+                              {{ item.original_line_price | money }} !
                             </s>
                           </dd>
                           <dt class="visually-hidden">
