--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -170,15 +170,15 @@
                       {%- if item.variant.compare_at_price  != item.final_line_price -%}
                         <dl class="cart-item__discounted-prices">
                           <dt class="visually-hidden">
-                            {{ 'products.product.price.regular_price' | t }}
+                            {{ 'products.product.price.regular_price' | t }} 
                           </dt>
                           <dd>
                             <s class="cart-item__old-price price price--end">
-                              {{ item.original_line_price | money }}
+                              {{ item.original_line_price | money }} .
                             </s>
                           </dd>
                           <dt class="visually-hidden">
-                            {{ 'products.product.price.sale_price' | t }}
+                            {{ 'products.product.price.sale_price' | t }} 
                           </dt>
                           <dd class="price price--end">
                             {{ item.final_line_price | money }}
