--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -25,9 +25,8 @@
                 {% if item.variant.compare_at_price > item.final_price %}
                   {% assign total_compare_at = total_compare_at | plus: item.variant.compare_at_price | times: item.quantity %}
                   {% assign saving = item.variant.compare_at_price | minus: item.final_price | times: item.quantity %}
-                  {% assign total_saving = saving | plus: total_saving %}
                 {% else %}
-                  {% assign total_compare_at = total_compare_at | plus: item.variant.price | times: item.quantity %}
+                  {% assign total_compare_at = total_compare_at | plus: item.final_price | times: item.quantity %}
                 {% endif %}
               {% endfor %}
               <div class="js-contents" {{ block.shopify_attributes }}>
@@ -41,7 +40,7 @@
                 </div>
                 <div class="totals">
                   <h2 class="totals__subtotal">Gespart:</h2>
-                  <s class="totals__subtotal-value">{{ total_saving | money_with_currency }}</s>
+                  <s class="totals__subtotal-value">{{ cart.total_price | minus: total_compare_at | money_with_currency }}</s>
                 </div>
 
                 <div>
