--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -176,12 +176,12 @@
                           <dt class="visually-hidden">
                             {{ 'products.product.price.sale_price' | t }}
                           </dt>
-                          <dd class="price price--end 1">
+                          <dd class="price price--end">
                             {{ item.final_line_price | money }}
                           </dd>
                         </dl>
                       {%- else -%}
-                        <span class="price price--end 2">
+                        <span class="price price--end">
                           {{ item.final_line_price | money }}
                         </span>
                       {%- endif -%}
@@ -279,12 +279,12 @@
                           <dt class="visually-hidden">
                             {{ 'products.product.price.sale_price' | t }}
                           </dt>
-                          <dd class="price price--end 3">
+                          <dd class="price price--end">
                             {{ item.final_line_price | money }}
                           </dd>
                         </dl>
                       {%- else -%}
-                        <span class="price price--end 4">
+                        <span class="price price--end">
                           {{ item.final_line_price | money }}
                         </span>
                       {%- endif -%}
