--- a/assets/base-neolymp.css
+++ b/assets/base-neolymp.css
@@ -1,8 +1,9 @@
 .badge-card {
     display: inline-block;
-    padding: 4px 16px;
-    border-radius: 4px;
-    box-shadow: 0 4px 4px hsl(0deg 0% 69% / 50%);
+    width: fit-content;
+    padding: 2px 8px;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px hsl(0deg 0% 69% / 50%);
 }
 
 .badge-special {
