--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -263,6 +263,7 @@
     </main>
 
     {% section 'footer' %}
+    {% section 'eg-sticky-atc' %}      
 
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
