--- a/assets/base-neolymp.css
+++ b/assets/base-neolymp.css
@@ -68,3 +68,13 @@
     color: #2d8b53;
 
 }
+
+::-moz-selection { /* Code for Firefox */
+    color: white;
+    background: #b80000;
+  }
+  
+  ::selection {
+    color: white;
+    background: #b80000;
+  }
