--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -47,8 +47,7 @@
             name="add"
             class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout %}button--secondary{% else %}button--primary{% endif %}"
             {% if product.selected_or_first_available_variant.available == false
-              or product.selected_or_first_available_variant.quantity_rule.min
-                > product.selected_or_first_available_variant.inventory_quantity
+              or product.selected_or_first_available_variant.quantity_rule.min > product.selected_or_first_available_variant.inventory_quantity and product.selected_or_first_available_variant.inventory_policy != 'continue'
             %}
               disabled
             {% endif %}
