--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -63,6 +63,9 @@
                 {%- endif -%}
               {%- else -%}
                 {{ 'products.product.sold_out' | t }}
+                {%- if product.selected_or_first_available_variant.inventory_policy == 'continue' -%}
+                  {{ 'products.product.pre-order' | t }}
+                {%- endif -%}
               {%- endif -%}
             </span>
             <div class="loading-overlay__spinner hidden">
