--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -264,6 +264,7 @@
     </main>
 
     {% sections 'footer-group' %}
+    {% section 'eg-sticky-atc' %}
 
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
